5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4188/executions/1582_1559.log
== TEST (2019-03-13 20:21:42) 
-- CODE:
frase = "ada lovelace foi aprimeira programadora da historia"
print(frase.upper()???)
-- ERROR:
File "XXXX", line 2
    print(frase.upper()???)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 20:22:04) 
-- CODE:
frase = "ada lovelace foi aprimeira programadora da historia"
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI APRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 20:22:25) 
-- CODE:
frase = "ada lovelace foi aprimeira programadora da historia"
print(frase.upper())
-- EXECUTION TIME:
0.14735
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI APRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 20:23:23) 
-- CODE:
frase = "ada lovelace foi aprimeira programadora da historia."
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI APRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 20:23:34) 
-- CODE:
frase = "ada lovelace foi aprimeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.206238
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI APRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 20:23:43) 
-- CODE:
frase = "ada lovelace foi aprimeira programadora da historia."
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI APRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 20:24:10) 
-- CODE:
frase = "ada lovelace foi a aprimeira programadora da historia."
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A APRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 20:24:20) 
-- CODE:
frase = "ada lovelace foi a aprimeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.136421
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A APRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 20:24:44) 
-- CODE:
frase = "ada lovelace foi a primeira programadora da historia."
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 20:24:57) 
-- CODE:
frase = "ada lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.134483
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
